--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "bikelineShuffler"
+version = "0.1.1"
+description = "An app to shuffle and randomly select a winner for the bikeline"
+authors = ["DjakeDjone"]
 license = ""
 repository = ""
 default-run = "app"
@@ -23,4 +23,4 @@ tauri = { version = "1.8.0", features = [] }
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
